config/validating-admission-policies.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: bind-fma-bound-serverreqpod
spec:
  policyName: fma-bound-serverreqpod
  matchResources:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["UPDATE"]
  validationActions:
    - Deny
...
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: bind-fma-immutable-fields
spec:
  policyName: fma-immutable-fields
  matchResources:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["UPDATE"]
  validationActions:
    - Deny
...
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: fma-bound-serverreqpod
  annotations:
    description: "Deny mutation of critical annotations and labels for bound server-requesting pods unless performed by an FMA controller service account."
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["UPDATE"]
  validations:
    # Deny changes from users to some critical annotations/labels
    # once a server-requesting Pod is bound to a server-providing Pod. It permits
    # such changes only when the requester is an FMA controller service
    # account.
    - expression: |
        request.userInfo.username.matches("^system:serviceaccount:[^:]+:[^:]*-fma-controllers$") ||
        !(
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/inference-server-config'].orValue('') != "" &&
          oldObject.metadata.?labels['dual-pods.llm-d.ai/dual'].orValue('') != ""
        ) ||
        (
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/inference-server-config'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/inference-server-config'].orValue('') &&
          oldObject.metadata.?labels['dual-pods.llm-d.ai/dual'].orValue('') == object.metadata.?labels['dual-pods.llm-d.ai/dual'].orValue('')
        )
      message: "One or more annotations/labels are managed by FMA controllers and cannot be modified once the server-requesting pod is bound to a providing pod."
...
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: fma-immutable-fields
  annotations:
    description: "Deny mutation of critical annotations and labels unless performed by an FMA controller service account."
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["UPDATE"]
  validations:
    # The expression below denies update operations that attempt to change
    # some critical annotations/labels. It permits
    # such changes only when the requester is an FMA controller service
    # account.
    - expression: |
        request.userInfo.username.matches("^system:serviceaccount:[^:]+:[^:]*-fma-controllers$") ||
        (
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/requester'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/requester'].orValue('') &&
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/status'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/status'].orValue('') &&
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/instance-id'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/instance-id'].orValue('') &&
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/server-port'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/server-port'].orValue('') &&
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/vllm-config'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/vllm-config'].orValue('') &&
          oldObject.metadata.?annotations['dual-pods.llm-d.ai/isc-routing-metadata'].orValue('') == object.metadata.?annotations['dual-pods.llm-d.ai/isc-routing-metadata'].orValue('') &&
          oldObject.metadata.?labels['dual-pods.llm-d.ai/dual'].orValue('') == object.metadata.?labels['dual-pods.llm-d.ai/dual'].orValue('') &&
          oldObject.metadata.?labels['dual-pods.llm-d.ai/launcher-config-name'].orValue('') == object.metadata.?labels['dual-pods.llm-d.ai/launcher-config-name'].orValue('')
        )
      message: "One or more annotations/labels are managed by FMA controllers and cannot be modified directly."
...
